adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,7 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores error nam eius id mollitia voluptatum aperiam quos consequuntur. Dolor ea magni eius consectetur nesciunt quas illum alias dolores vitae consequatur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident atque impedit reprehenderit eum autem iste vitae fuga, pariatur similique quae cupiditate commodi non ipsa nostrum aliquam repellat, nobis deleniti hic?</p>
+    
 </body>
 </html>
